--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -28,8 +28,8 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
-package/name=""
+package/unique_name="dev.ehan.timefall"
+package/name="Time Fall"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
